@@ -1,18 +1,24 @@
 package uz.javachi.autonline.service;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
-import uz.javachi.autonline.dto.response.*;
-import uz.javachi.autonline.model.*;
+import uz.javachi.autonline.config.Localized;
 import uz.javachi.autonline.projection.LessonAnonsProjection;
+import uz.javachi.autonline.dto.response.LessonResponseDTO;
+import uz.javachi.autonline.dto.response.QuestionResponseDTO;
+import uz.javachi.autonline.dto.response.VariantResponseDTO;
+import uz.javachi.autonline.model.Lesson;
+import uz.javachi.autonline.model.LessonTranslation;
+import uz.javachi.autonline.model.QuestionTranslation;
+import uz.javachi.autonline.model.VariantTranslation;
 import uz.javachi.autonline.repository.LessonRepository;
-import uz.javachi.autonline.repository.QuestionRepository;
 
+import java.util.Collection;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -21,212 +27,74 @@ import java.util.stream.Collectors;
 public class LessonService {
 
     private final LessonRepository lessonRepository;
-    private final QuestionRepository questionRepository;
 
-    private LessonResponseDTO getLessonResponseDTO(Lesson lesson) {
-        LessonName lessonNames = lesson.getLessonNames();
-        LessonDescription lessonDescription = lesson.getLessonDescription();
-        return LessonResponseDTO.builder()
-                .lessonId(lesson.getLessonId())
-                .nameUz(lessonNames.getNameUz())
-                .nameOz(lessonNames.getNameOz())
-                .nameRu(lessonNames.getNameRu())
-                .descriptionOz(lessonDescription.getDescriptionOz())
-                .descriptionUz(lessonDescription.getDescriptionUz())
-                .descriptionRu(lessonDescription.getDescriptionRu())
-                .questions(lesson.getQuestions().stream()
-                        .map(this::convertToDTO)
-                        .collect(Collectors.toList()))
-                .build();
+
+    public List<LessonResponseDTO> getAllLessons() {
+        String lang = LocaleContextHolder.getLocale().getLanguage();
+        List<Lesson> lessons = lessonRepository.findAllWithAllTranslationsAndRelations();
+        return lessons.stream()
+                .map(l -> mapLessonToDto(l, lang))
+                .toList();
     }
 
-    private QuestionResponseDTO convertToDTO(Question question) {
-        return QuestionResponseDTO.builder()
-                .questionId(question.getQuestionId())
-                .photo(question.getPhoto())
-                .questionText(convertQuestionText(question.getQuestionText()))
-                .answers(convertAnswers(question.getAnswers(), question.getQuestionId()))
-                .build();
+    public LessonResponseDTO getLesson(Integer id) {
+        Lesson lesson = lessonRepository.findByLessonId(id)
+                .orElseThrow(() -> new EntityNotFoundException("Lesson not found: %s".formatted(id)));
+        String lang = LocaleContextHolder.getLocale().getLanguage();
+        return mapLessonToDto(lesson, lang);
     }
 
-    private QuestionTextResponseDTO convertQuestionText(QuestionText questionText) {
-        if (questionText == null) return null;
+    private LessonResponseDTO mapLessonToDto(Lesson lesson, String lang) {
+        LessonTranslation t = findTranslation(lesson.getTranslations(), lang);
+        LessonResponseDTO dto = new LessonResponseDTO();
+        dto.setId(lesson.getLessonId());
+        dto.setIcon(lesson.getLessonIcon());
+        dto.setViewsCount(lesson.getViewsCount());
+        dto.setName(t != null ? t.getName() : null);
+        dto.setDescription(t != null ? t.getDescription() : null);
 
-        return new QuestionTextResponseDTO(
-                questionText.getOz(),
-                questionText.getUz(),
-                questionText.getRu()
-        );
+        List<QuestionResponseDTO> qs = lesson.getQuestions().stream()
+                .map(q -> {
+                    QuestionResponseDTO qdto = new QuestionResponseDTO();
+                    qdto.setQuestionId(q.getQuestionId());
+                    qdto.setPhoto(q.getPhoto());
+                    QuestionTranslation qt = findTranslation(q.getTranslations(), lang);
+                    qdto.setQuestionText(qt != null ? qt.getQuestionText() : null);
+
+                    List<VariantResponseDTO> vs = q.getVariants().stream()
+                            .map(v -> {
+                                VariantResponseDTO vd = new VariantResponseDTO();
+                                vd.setVariantId(v.getVariantId());
+                                vd.setIsCorrect(v.getIsCorrect());
+                                VariantTranslation vt = findTranslation(v.getTranslations(), lang);
+                                vd.setText(vt != null ? vt.getText() : null);
+                                return vd;
+                            }).collect(Collectors.toList());
+                    qdto.setVariants(vs);
+                    return qdto;
+                }).collect(Collectors.toList());
+
+        dto.setQuestions(qs);
+        return dto;
     }
 
-    private AnswerResponseDTO convertAnswers(Answers answers, Integer questionId) {
-        if (answers == null) return null;
+    private <X extends Localized> X findTranslation(Collection<X> translations, String lang) {
+        if (translations == null || translations.isEmpty()) return null;
 
-        return new AnswerResponseDTO(
-                answers.getAnswerId(),
-                questionId,
-                answers.getStatus(),
-                convertAnswerText(answers.getAnswerText())
-        );
+        return translations.stream()
+                .filter(t -> lang.equalsIgnoreCase(t.getLang()))
+                .findFirst()
+                .orElse(null);
     }
 
-    private AnswerTextResponseDTO convertAnswerText(AnswerText answerText) {
-        if (answerText == null) return null;
-
-        return new AnswerTextResponseDTO(
-                answerText.getOz(),
-                answerText.getUz(),
-                answerText.getRu()
-        );
-    }
-
-    public ResponseEntity<LessonResponseDTO> getByLessonId(Integer lessonId) {
-        Lesson lesson = lessonRepository.findLessonWithAllRelations(lessonId)
-                .orElseThrow(() -> new RuntimeException("Lesson not found"));
-
-
-        LessonResponseDTO lessonResponseDTO = new LessonResponseDTO();
-        LessonName lessonNames = lesson.getLessonNames();
-        LessonDescription lessonDescription = lesson.getLessonDescription();
-
-        lessonResponseDTO.setLessonId(lesson.getLessonId());
-        lessonResponseDTO.setNameUz(lessonNames.getNameUz());
-        lessonResponseDTO.setNameOz(lessonNames.getNameOz());
-        lessonResponseDTO.setNameRu(lessonNames.getNameRu());
-        lessonResponseDTO.setDescriptionOz(lessonDescription.getDescriptionOz());
-        lessonResponseDTO.setDescriptionUz(lessonDescription.getDescriptionUz());
-        lessonResponseDTO.setDescriptionRu(lessonDescription.getDescriptionRu());
-        lessonResponseDTO.setLessonIcon(lesson.getLessonIcon());
-        lessonResponseDTO.setLessonQuestionCount(questionRepository.countQuestionByLesson(lesson.getLessonId()));
-
-        List<QuestionResponseDTO> questionResponses = lesson.getQuestions().stream().map(q -> {
-            QuestionResponseDTO qr = new QuestionResponseDTO();
-            qr.setQuestionId(q.getQuestionId());
-            qr.setPhoto(q.getPhoto());
-
-            QuestionText qt = q.getQuestionText();
-            if (qt != null) {
-                QuestionTextResponseDTO qtr = new QuestionTextResponseDTO();
-                qtr.setOz(qt.getOz());
-                qtr.setUz(qt.getUz());
-                qtr.setRu(qt.getRu());
-                qr.setQuestionText(qtr);
-            }
-
-            Answers answers = q.getAnswers();
-            if (answers != null) {
-                AnswerResponseDTO ar = new AnswerResponseDTO();
-                ar.setAnswerId(answers.getAnswerId());
-                ar.setStatus(answers.getStatus());
-                ar.setQuestionId(q.getQuestionId());
-
-                AnswerText at = answers.getAnswerText();
-                if (at != null) {
-                    AnswerTextResponseDTO atr = new AnswerTextResponseDTO();
-                    atr.setOz(at.getOz());
-                    atr.setUz(at.getUz());
-                    atr.setRu(at.getRu());
-                    ar.setAnswerText(atr);
-                }
-
-                qr.setAnswers(ar);
-            }
-
-            return qr;
-        }).collect(Collectors.toList());
-
-        lessonResponseDTO.setQuestions(questionResponses);
-
-        return ResponseEntity.ok(lessonResponseDTO);
-    }
-
-    public List<LessonAnonsProjection> getAllLessonsAnons() {
-        return lessonRepository.findAllLessonsAnons();
-    }
-
-    @Transactional(propagation = Propagation.REQUIRES_NEW)
-    public void recordView(Integer lessonId, Optional<Integer> currentUserId) {
-        lessonRepository.incrementViews(lessonId);
-        if (currentUserId.isEmpty()) {
-            lessonRepository.incrementUnique(lessonId);
-        }
+    public List<LessonAnonsProjection> getLessonsAnons() {
+        String lang = LocaleContextHolder.getLocale().getLanguage();
+        List<LessonAnonsProjection> lessons = lessonRepository.findAllWithTranslations(lang);
+        if (lessons.isEmpty()) return null;
+        return lessons;
     }
 
     public ResponseEntity<List<LessonResponseDTO>> getRandomQuiz(Integer interval) {
-
-        if (interval < 5 || interval > 100) {
-            throw new IllegalArgumentException("Interval must be between 5 and 100");
-        }
-
-        List<Integer> questionIds = questionRepository.findRandomQuestionIds(interval);
-        if (questionIds.isEmpty()) {
-            return ResponseEntity.ok(List.of());
-        }
-
-        List<Question> questionsWithRelations = questionRepository.findQuestionsByIdsWithAllRelations(questionIds);
-
-        List<LessonResponseDTO> result = questionsWithRelations.stream()
-                .collect(Collectors.groupingBy(Question::getLesson))
-                .entrySet().stream()
-                .map(entry -> {
-                    Lesson lesson = entry.getKey();
-                    List<Question> lessonQuestions = entry.getValue();
-
-                    LessonResponseDTO lessonResponseDTO = new LessonResponseDTO();
-                    LessonName lessonNames = lesson.getLessonNames();
-                    LessonDescription lessonDescription = lesson.getLessonDescription();
-
-                    lessonResponseDTO.setLessonId(lesson.getLessonId());
-                    lessonResponseDTO.setNameUz(lessonNames.getNameUz());
-                    lessonResponseDTO.setNameOz(lessonNames.getNameOz());
-                    lessonResponseDTO.setNameRu(lessonNames.getNameRu());
-                    lessonResponseDTO.setDescriptionOz(lessonDescription.getDescriptionOz());
-                    lessonResponseDTO.setDescriptionUz(lessonDescription.getDescriptionUz());
-                    lessonResponseDTO.setDescriptionRu(lessonDescription.getDescriptionRu());
-                    lessonResponseDTO.setLessonIcon(lesson.getLessonIcon());
-                    lessonResponseDTO.setLessonQuestionCount((long) lessonQuestions.size());
-
-                    List<QuestionResponseDTO> questionResponses = lessonQuestions.stream().map(q -> {
-                        QuestionResponseDTO qr = new QuestionResponseDTO();
-                        qr.setQuestionId(q.getQuestionId());
-                        qr.setPhoto(q.getPhoto());
-
-                        QuestionText qt = q.getQuestionText();
-                        if (qt != null) {
-                            QuestionTextResponseDTO qtr = new QuestionTextResponseDTO();
-                            qtr.setOz(qt.getOz());
-                            qtr.setUz(qt.getUz());
-                            qtr.setRu(qt.getRu());
-                            qr.setQuestionText(qtr);
-                        }
-
-                        Answers answers = q.getAnswers();
-                        if (answers != null) {
-                            AnswerResponseDTO ar = new AnswerResponseDTO();
-                            ar.setAnswerId(answers.getAnswerId());
-                            ar.setStatus(answers.getStatus());
-                            ar.setQuestionId(q.getQuestionId());
-
-                            AnswerText at = answers.getAnswerText();
-                            if (at != null) {
-                                AnswerTextResponseDTO atr = new AnswerTextResponseDTO();
-                                atr.setOz(at.getOz());
-                                atr.setUz(at.getUz());
-                                atr.setRu(at.getRu());
-                                ar.setAnswerText(atr);
-                            }
-
-                            qr.setAnswers(ar);
-                        }
-
-                        return qr;
-                    }).collect(Collectors.toList());
-
-                    lessonResponseDTO.setQuestions(questionResponses);
-                    return lessonResponseDTO;
-                })
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(result);
+        return null;
     }
 }
